package com.dungeondevs.components;

import com.artemis.Component;

/**
 * Component qui sert à identifier l'entité du personnage du joueur.
 * grâce à ce component, on peut récupérer l'entité du personnage du joueur.
 */
public class PlayerCharacterComponent extends Component {
}
