package com.dungeondevs.components;

public class StateIdle extends State {

}
